--- a/templates/configuration.mustache
+++ b/templates/configuration.mustache
@@ -166,7 +166,7 @@ conf = {{{packageName}}}.Configuration(
                  access_token=None,
                  username=None, password=None,
                  discard_unknown_keys=False,
-                 disabled_client_side_validations="",
+                 disabled_client_side_validations=",".join(JSON_SCHEMA_VALIDATION_KEYWORDS),
 {{#hasHttpSignatureMethods}}
                  signing_info=None,
 {{/hasHttpSignatureMethods}}
