feat: adding idempotency key header

--- a/templates/model_utils.mustache
+++ b/templates/model_utils.mustache
@@ -1735,3 +1735,5 @@ def set_request_options(request_options, self):
         self.api_client.configuration = config
     if request_options.correlation_id:
         self.api_client.set_default_header('bt-trace-id', request_options.correlation_id)
+    if request_options.idempotency_key:
+        self.api_client.set_default_header('bt-idempotency_key', request_options.idempotency_key)
